# ai-training

manufacturing-backend/: .env.example  README.md  alembic.ini  dump.rdb  main.py  pyproject.toml  requirements.txt  start.sh  worker.py
manufacturing-backend/alembic/: env.py
manufacturing-backend/alembic/versions/: 65b8a86f67d0_add_error_message_to_documents.py  a3f2c1d4e5b6_add_job_id_and_progress_message_to_documents.py  c914c2d13626_initial_schema.py
manufacturing-backend/app/: config.py  database.py  main.py  models.py  schemas.py
manufacturing-backend/app/auth/: dependencies.py  helpers.py  router.py
manufacturing-backend/app/routers/: admin.py  employee.py
manufacturing-backend/app/services/: s3.py
manufacturing-backend/app/workers/: training_worker.py
manufacturing-frontend/: .env.example  README.md  index.html  package-lock.json  package.json
manufacturing-frontend/src/: App.tsx
manufacturing-frontend/src/api/: client.ts
manufacturing-frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
manufacturing-frontend/src/contexts/: AuthContext.tsx
manufacturing-frontend/src/pages/: Login.tsx
manufacturing-frontend/src/pages/admin/: Documents.tsx  TrainingDetail.tsx
manufacturing-frontend/src/pages/employee/: TrainingDetail.tsx  Trainings.tsx
manufacturing-frontend/src/types/: index.ts
